--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,7 @@
 
 	<header id="nextLogoContainer" class="my-3 d-flex justify-content-center align-items-center gap-1 d-none">
 		<img id="nextEventLogo" alt="Next event logo" width="300" height="128" src="/assets/event_supporting_2023.png">
-		<img style="display: none;" id="nextEventChapterCharacter" alt="Worldlink chapter character" width="90" height="90">
+		<img style="display: none;" id="nextEventChapterCharacter" alt="Worldlink chapter character icon" width="90" height="90">
 	</header>
 
 	<div id="nextEventCountdown" aria-label="Next event countdown" role="timer" class="mb-3 d-none">
@@ -131,7 +131,7 @@
 			<span class="placeholder rounded-4 w-100 h-100"></span>
 		</span>
 		<img style="display: none;" id="eventLogo" alt="Event logo" width="300" height="128">
-		<img style="display: none;" id="eventChapterCharacter" alt="Worldlink chapter character" width="90" height="90">
+		<img style="display: none;" id="eventChapterCharacter" alt="Worldlink chapter character icon" width="90" height="90">
 		<div id="ccTeamsContainer" class="d-none ms-2 d-flex flex-column justify-content-center align-items-start">
 			<div class="d-flex justify-content-center align-items-center gap-1">
 				<img id="ccTeam1Img" alt="Team 1 icon" width="60">
@@ -995,6 +995,13 @@
 			if(eventData.chapter_character) {
 				document.getElementById("eventChapterCharacter").style.display = ""
 				document.getElementById("eventChapterCharacter").src = `assets/character_${eventData.chapter_character}.png`
+
+				const characterName = eventData.chapters.find(x => x.num === eventData.chapter_num)?.title
+				if(characterName) {
+					document.getElementById("eventChapterCharacter").alt = `${characterName} icon`
+				} else {
+					document.getElementById("eventChapterCharacter").alt = "Worldlink chapter character icon"
+				}
 			} else {
 				document.getElementById("eventChapterCharacter").style.display = "none"
 			}
