tweak(wl-graph): disable animations to reduce lag

--- a/public/wl-graph/index.html
+++ b/public/wl-graph/index.html
@@ -87,6 +87,7 @@
 				}))
 			},
 			options: {
+				animation: false,
 				aspectRatio: Math.max(1, window.screen.availWidth/window.screen.availHeight),
 				scales: {
 					x: {
