fix: don't flash tsukasa when loading next event logo

--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@
 	</div>
 
 	<header id="nextLogoContainer" class="my-3 d-flex justify-content-center align-items-center gap-1 d-none">
-		<img id="nextEventLogo" alt="Next event logo" width="300" height="128" src="/assets/event_supporting_2023.png">
+		<img id="nextEventLogo" alt="Next event logo" width="300" height="128">
 		<img style="display: none;" id="nextEventChapterCharacter" alt="Worldlink chapter character icon" width="90" height="90">
 	</header>
 
