clarify beta label

--- a/public/index.html
+++ b/public/index.html
@@ -730,7 +730,7 @@
 					</div>
 					<hr>
 					<div class="d-flex justify-content-center">
-						<p>This feature is in beta. Report any bugs or wrong data to amia.</p>
+						<p>This feature is in beta. Report any bugs or wrong data to amia (the person, not the bot).</p>
 					</div>
 				</div>
 			</div>
