--- a/public/index.html
+++ b/public/index.html
@@ -853,7 +853,7 @@
 
 				if(data.news_id) {
 					document.getElementById("gameMaintenanceBannerNewsLink").style.display = ""
-					document.getElementById("gameMaintenanceBannerNewsLink").href = `https://n-production-web.sekai-en.com/information/index.html?id=${next.news_id}`
+					document.getElementById("gameMaintenanceBannerNewsLink").href = `https://n-production-web.sekai-en.com/information/index.html?id=${data.news_id}`
 				} else {
 					document.getElementById("gameMaintenanceBannerNewsLink").style.display = "none"
 				}
